--- a/src/app/tablero/components/informacion/informacion.component.html
+++ b/src/app/tablero/components/informacion/informacion.component.html
@@ -1,22 +1,13 @@
 <div class="main">
     <div class="cliente-container">
-        <div class="combobox-container">
-            <select id="myCombobox" (change)="onSelectChange($event)">
-                <option *ngFor="let cliente of clientes" [value]="cliente.ID">
-                    {{cliente.nombre}} {{cliente.apellido}}
-                </option>
-            </select>
-        </div>
         <div class="info-container">
             <div class="white2-box">
                 <h2>Informacion cliente</h2>
                 <div class="info-text">
-                    <p>ID: {{selectedCliente?.ID}} </p>
-                    <p>Nombre: {{selectedCliente?.nombre}}</p>
-                    <p>Apellido: {{selectedCliente?.apellido}}</p>
-                    <p>Telefono: {{selectedCliente?.telefono}}</p>
-                    <p>Email: {{selectedCliente?.email}}</p>
-                    <p>Historial </p>
+                    <p>Nombre: {{cliente.nombre}}</p>
+                    <p>Apellido: {{cliente.apellido}}</p>
+                    <p>Telefono: {{cliente.telefono}}</p>
+                    <p>Email: {{cliente.email}}</p>
                 </div>
             </div>  
         </div>
@@ -27,9 +18,9 @@
             <p>{{datoSensor}} cms</p>
         </div>    
         <div class="button-container">
-            <button class="button" (click)="sensor()">Capturar datos</button>
-            <button class="button">Registrar</button>
+            <button class="button" (click)="capturarDatosSensor()">Capturar datos</button>
+            <button class="button" (click)="registrar()">Registrar</button>
         </div> 
     </div>
 </div>
-
+<router-outlet></router-outlet>
