--- a/src/app/Usuario/tablero-usuario/tablero-usuario.component.scss
+++ b/src/app/Usuario/tablero-usuario/tablero-usuario.component.scss
@@ -5,23 +5,16 @@
     padding: 20px;
 }
 
-.sensor-container, .cliente-container {
+.cliente-container {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.white-box {
-    background-color: #ffffff;
-    padding: 20px;
-    border: 1px solid #cccccc;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    width: 300px;
-    margin: 20px auto; 
+app-grafico {
+    width: 100%;
+    max-width: 800px;
 }
-
 .white2-box {
     background-color: #ffffff;
     padding: 20px;
@@ -29,7 +22,6 @@
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
-    width: 400px;
     margin: 20px auto; 
 }
 
@@ -38,12 +30,13 @@
 }
 
 .info-text {
+    margin-top: 20px;
     text-align: left;
 }
 
 .button-container {
-    margin-top: 20px;
     text-align: center;
+    margin-top: 20px;
 }
 
 .button {
@@ -53,9 +46,29 @@
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    margin: 0 10px;
+    margin: 0 10px;  
 }
 
 .button:hover {
     background-color: #0056b3;
+}
+
+.header-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+    background-color: #f8f9fa; 
+    border-bottom: 1px solid #dee2e6; 
+}
+
+.bienvenido-container p {
+    margin: 0; 
+    font-size: 16px;
+    color: #343a40; 
+}
+
+.logout-container {
+    display: flex;
+    align-items: center;
 }
