--- a/src/app/layouts/full/full.component.html
+++ b/src/app/layouts/full/full.component.html
@@ -43,9 +43,9 @@
       <div class="ms-auto">
         <button mat-button class="fs-16 pt-4 pb-4 ps-8 pe-8 text-light-muted d-flex align-items-center" [matMenuTriggerFor]="menu">
           <div class="d-flex align-items-center">
-            <img src="assets/images/user2.webp" class="rounded-circle" alt="">
-            <span class="fw-light ms-8 text-secondary">Hi,</span>
-            <span class="fw-bold ms-8">Julia</span>
+            <img src="assets/images/admin.png" class="rounded-circle" alt="">
+            <span class="fw-light ms-8 text-secondary">Hola,</span>
+            <span class="fw-bold ms-8">Admin</span>
             <i-feather name="chevron-down" class="feather-base"></i-feather>
           </div>
         </button>
