--- a/src/app/autenticacion/login/login.component.html
+++ b/src/app/autenticacion/login/login.component.html
@@ -4,7 +4,7 @@
             <div class="card">
                 <div class="card-body">
                     <div class="logo-container">
-                        <img src="assets/images/logo-dark.svg" alt="Logo" />
+                        <img src="assets/images/unmsm.png"/>
                     </div>
                     <div class="auth-header">
                         <h2>Hola, Bienvenido</h2>
