--- a/src/app/layouts/full/full.component.html
+++ b/src/app/layouts/full/full.component.html
@@ -7,7 +7,7 @@
     <div class="p-16">
       <div class="mb-16">
         <a href="javascript:void(0)" class="d-flex align-items-center">
-          <img src="assets/images/favicon.svg" alt=""> <span class="ms-16 fw-medium fs-26">Flexy</span>
+          <img src="assets/images/logo.png" width="80px"> <span class="ms-16 fw-medium fs-26">GRUPO 14</span>
         </a>
 
       </div>
