--- a/src/app/tablero/components/turnos/turnos.component.scss
+++ b/src/app/tablero/components/turnos/turnos.component.scss
@@ -7,10 +7,57 @@
     flex: 1; 
 }
 
-.acciones-container {
-    flex: 1; 
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
+.turno-card {
+    background-color: #ffffff; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+    border-radius: 8px;
+    padding: 16px; 
+    margin-bottom: 16px; 
+    width: 80%; 
+    display: flex; 
+    justify-content: space-between; 
+    align-items: center; 
+    transition: transform 0.2s; 
+}
+
+.turno-card:hover {
+    transform: scale(1.02); 
+}
+
+
+.button {
+    padding: 10px 20px;
+    margin-top: 20px;
+    background-color: #007bff;
+    color: #ffffff; 
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin: 0 10px;
+}
+
+.button:hover {
+    background-color: #0056b3;
+}
+
+
+.modal {
+    display: none; 
+    position: fixed;
+    z-index: 1; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0, 0, 0); 
+    background-color: rgba(0, 0, 0, 0.4); 
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; 
 }
